css/main.css
@import url("https://fonts.googleapis.com/css2?family=Eczar&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Eczar&family=Roboto&display=swap");




:root{
    --color-main: #383D93;
    --color-main-s: #dbcdf9db;
    --color-title: #2D3134;
    --color-primary: #FFFFFF;
    --color-yellow: #DEF587;
    --color-orange: #FE7600;
    --color-light-black:#F6F7FB;
    --font-secondary: 'Roboto', sans-serif;
    --font-primary: 'Eczar', serif;


    }
    *{
        padding: 0;
    margin: 0;
    box-sizing: border-box;
}
html {
  font-size: 90%;
}


/* header nav .icon-container {
 
  display: flex;
  justify-content: center;
  align-items: center;
  justify-content: space-between;
} */


header nav .icon-container h6 {
  color: black;
  text-decoration: underline;
  margin: 1rem;
}
header .navbar-brand {
    color:var(--color-title);
    font-size: 1.5rem;
    text-transform: uppercase;
    font-weight: 600;
    font-family: "Eczar", serif;
  }
.nav-inner{
    border-bottom: 1px solid var(--color-light-black);
}
  header .navbar-nav  {
  font-size: 1rem;
  font-family: var(--font-secondary);
  margin-right: 5rem;
}
header .navbar-nav .active{
    border-bottom: 2px solid var(--color-orange);
    color: var(--color-main) !important;
}
header .navbar-nav .nav-link{
    margin-right: 1.5rem;
    font-size: 1.2rem;
} 
header .navbar-nav .nav-link:hover{
    border-bottom: 2px solid var(--color-orange);
}

.navbar-collapse .sign{
    background: var(--color-main);
    color: var(--color-light-black);
    font-family: var(--font-secondary);
}
.navbar-collapse .sign:hover{
    background: var(--color-orange);
    color: var(--color-light-black);
}


.icon-container  i{
  color: var(--color-main);
  font-size: 3em;
}

.view-container a{
  text-decoration: underline;
  color: var(--color-main) ;
  /* background: #000; */
  font-family: var(--font-secondary);
  font-size: 0.8rem;
}


.landing-container{
    margin-top: 2rem;
}


.discover .title-container h1{
    /* position: relative; */
    font-size: 3rem;
}

.discover .title-container h1 span{
  color: var(--color-main);
  font-weight: 700;
}
.discover .title-container p{
  font-size: 1.2rem;
  font-family: var(--font-secondary);
  line-height: 1.5;
  margin: 2rem 0;;
}
.discover-now-container .discover-btn{
    background: var(--color-main);
    color: var(--color-primary);
    /* font-size: 1.2rem; */
    font-family: var(--font-secondary);
    /* font-weight: 600; */
}

.discover-now-container .phone-icon{
    background: var(--color-orange);
    /* border-radius: 100%; */
    width: 20px;
    height: 20px;
    padding: 1.8rem;
}
.discover-now-container .phone-icon i{
    color: rebeccapurple;
    background: var(--color-light-black);
    /* border-radius: 100%; */
    font-size: 1rem;
    /* padding: 1rem; */
}

/*  card landing */
.aside{
  /* position: relative */
}
.aside .card-box{
  position: absolute;
  font-family: var(--font-secondary);
  top: 7rem;
  left: -0.5rem;
  
}
.aside .card .trip-card{
  background: var(--color-orange);
}
.trip-card-inner{
  background: var(--color-primary);
}

.trip-card-inner h4{
  font-size: 0.8rem;
  margin: 0;
  padding: 0;
}
.trip-card-inner p{
  font-size: 0.3rem;
  margin: 0;
  padding: 0;
  color: var(--color-title);
}

.card-box .total_trip h3{
  font-size: 1rem;
  font-weight: 600;
  margin: 0.5rem  0;
}

.card-box .total_trip p{
  font-size: 0.5rem;
  color: var(--color-title);
  margin: 0;
}
/* card landing end */


/* participant section start  */

.participant-container{
  position: absolute;
  top: 2rem;
 right: -5rem;
}
.participant-box .participant-image{
  position: relative;
}
.participant-box .participant-image > *{
  width: 4rem;
margin-left: -2rem;

  /* margin-left: -1.5rem; */
  /* background: var(--color-main); */
}
.participant-box .participant-image .plus{
  background: var(--color-main);
  color: var(--color-primary);
  font-size: 0.5rem;
  
  
}



.info-icon i{
  color: var(--color-main);
  font-size: 0.7rem;
}
.info-detail p{
  margin: 0;
  /* margin-bottom: 0; */
  font-size: 0.6rem;
}

.participant-btn{
  font-family: var(--font-secondary);
  font-size: 0.7rem;
  font-weight: 700;
}

.reshedule-btn{
  /* color: var(--color-title); */
  
  /* background-color: var(--color-primary); */
  
}
.reshedule-btn:hover{
  color: var(--color-primary);
  box-shadow: 0.3rem 1rem 0 var(--color-light-black);
  background-color: var(--color-orange);
  
}

.jointrip-btn{
  background: var(--color-orange);
  color: var(--color-primary);
}
.jointrip-btn:hover{
  background: var(--color-main);
  color: var(--color-primary);
}
/* participant section end */



.image-container{
  /* width: 70%; */
  position: relative;
}
.image-container img{
    width: 80%;
    height: auto;
    /* background: linear-gradient(to bottom right, var(--color-yellow), var(--color-orange)); */

    /* background: #000; */
    /* margin-top: 10rem; */
}

.inner-foot{
    /* background: var(--color-title); */
    border-radius: 1rem;
    padding: 1rem;
}
.foot-content button{
    background: var(--color-main);
    padding: 1rem 2rem;
    border-radius: 1rem;
    color: var(--color-light-black);
}
.foot-content .location i{
    font-size: 1.5rem;
    padding: 1.5rem;
    color: var(--color-main);
    border: 1px solid var(--color-main);
    border-radius: 1rem;
}
.foot-icon h4{
    color: var(--color-main);
}




  
  .main {
    width: 100%;
    height: 100vh;
    position: relative;
    display: flex;
    justify-content: center;
    align-items: center;
  }
  .main .main-box {
    width: 80%;
    height: 80%;
    opacity: 0.9;
  }
  .main .main-box #signup-box {
    font-size: 0.8em;
  }
  .main .main-box #signup-box h2 {
    font-size: 2rem;
  }
  .main .main-box .title-box {
    color: var(--color-light-black);
    background: var(--color-main);
    padding: 2rem 4rem;
    text-align: center;
  }
  .main .main-box .title-box h2, .main .main-box .title-box h4 {
    font-family: "Eczar", serif;
    font-size: 3.5rem;
  }
  .main .main-box .title-box h4 {
    font-size: 2.7rem;
  }
  .main .main-box .title-box p {
    font-family: "Roboto", sans-serif;
    font-size: 1.5rem;
  }
  .main .main-box .title-box #signp-title h2 {
    font-size: 2rem;
  }
  .main .main-box .title-box #signp-title h4 {
    font-size: 1rem;
  }
  .main .main-box .title-box #signp-title p {
    font-size: 1rem;
  }
  .main .main-box .form-box {
    background: var(--color-light-black);  
    padding: 2rem 4rem;
    font-family: "Roboto", sans-serif;
    font-size: 1.2rem;
  }
  .main .main-box .form-box h2 {
    font-family: "Eczar", serif;
    font-size: 3rem;
    text-align: center;
  }
  .main .main-box .form-box .forget {
    cursor: pointer;
    color: #0ee73d;
    letter-spacing: 0.3rem;
    text-decoration: underline;
  }
  .main .main-box .form-box .btn {
    font-size: 1.4rem;
  }
  .main .main-box .form-box .signup_click span {
    color: #0ee73d;
    font-weight: 500;
    cursor: pointer;
    text-decoration: underline;
  }
  .main .main-box .form-box #signup-btn {
    width: 100%;
    border-radius: 3rem;
  }
  
  .profile-main-container .card-container {
    padding: 1rem;
  }
  .profile-main-container .card-container .data-content {
    padding: 0rem 3rem;
  }
  .profile-main-container .card-container .card-inner {
    width: 100%;
    height: 100%;
    background: #c9c9c9;
  }
  .profile-main-container .card-container .card-inner h2 {
    font-family: "Eczar", serif;
    font-size: 3rem;
    text-align: center;
    text-decoration: underline;
  }
  .profile-main-container .card-container .card-inner div {
    font-family: "Roboto", sans-serif;
    font-size: 1rem;
  }
  .profile-main-container .card-container .card-inner .profile-container .data-container .data-content h4:last-child {
    margin-left: 1rem;
  }
  .profile-main-container .card-container .card-inner .profile-container .data-container .data-content h4 {
    text-align: right;
    font-size: 1rem;
  }
  .profile-main-container .card-container .card-inner .history-container {
    position: relative;
  }
  .profile-main-container .card-container .card-inner .history-container table {
    background-color: #555;
    color: white;
  }
  .profile-main-container .card-container .card-inner .history-container table th {
    text-decoration: none;
    padding: 1rem;
    border: 1px solid white;
  }
  .profile-main-container .card-container .card-inner .history-container .order {
    background: #555;
    height: 50%;
    display: flex;
    justify-content: center;
    align-items: center;
  }
  .profile-main-container .card-container .card-inner .history-container h6 {
    font-family: "Roboto", sans-serif;
    font-size: 2rem;
    color: white;
  }
  

  /* contact form  start*/
.main-contact{
  
  display: flex;
  justify-content: center;
  align-items: center;

  /* background: fuchsia; */
}
.contact-box{
  background: var(--color-light-black)

}

  .contact-title-container h2 {
    text-align: center;
    color: var(--color-main);
    font-size: 3rem;
    font-weight: 700;
    font-family: var(--font-primary);
    /* width: 50%; */
  }
  .contact-title-container h4 {
    text-align: center;
    color: var(--color-title);
    font-size: 2rem;
    font-family: var(--font-secondary);
    /* font-weight: 700; */
  }

.contact-title-container p{
  line-height: 1.5;
font-family: var(--font-secondary);
}

.contact-title-icon-container{
  font-family: var(--font-primary);

}
.contact-title-icon-container i{
font-size: 3rem;
color: var(--color-main)  ;
}
  .contact-form{
    /* width: 80%; */
    position: relative;
    background: var(--color-primary);
  }

  .contact-input-container{
    width: 80%;
  }
  .contact-input-container .contact-input{
    background: var(--color-light-black);
    color: var(--color-main);
  }
  .contact-input-container .contact-input::placeholder{
    color: var(--color-main);

  }
  .contact-input-container .message{
    height: 7rem;
  }

  @media screen and (max-width: 572px){
    
    .participant-btn-conatiner{
      /* background: #000; */
      flex-direction: column;
      

    }
    .reshedule-btn{
      margin-left: 0 !important;
      
      box-shadow: none;
      margin-bottom: 0.5rem;
    }
    
  
  }

